--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <h2 class="text-3xl md:text-5xl my-10 text-white leading-snug font-light text-center">Оставьте заявку и получите 20% скидку на подключение дополнительных устройств!</h2>
         <h3 class="text-gray-300 my-10 text-base md:text-3xl text-center">С вами свяжется наш специалист и <span class="font-based text-white">БЕСПЛАТНО </span><br>проконсультирует Вас по вопросам систем Умного Дома!</h3>
         <!--send number user-->
-        <div id="phoneError" class="error-message ">123</div>
+        <div id="phoneError" class="error-message "></div>
    <div class="flex flex-col sm:flex-row justify-center items-center w-full my-10 mx-auto space-y-4 sm:space-y-0 sm:space-x-4">
 
     <div class="w-full max-w-md flex flex-col">
